MOC-60: [FE] Create list UI for schemas, groups, projects and people.

--- a/mocker-front/src/app/component/people/component/person/person.component.html
+++ b/mocker-front/src/app/component/people/component/person/person.component.html
@@ -46,5 +46,5 @@
       <moc-description class='tw-mt-3' description='You have not made any payments.'></moc-description>
     </div>
   </div>
-  <moc-copyright></moc-copyright>
+  <moc-copyright mocClass='tw-mt-10'></moc-copyright>
 </div>
