--- a/mocker-front/src/app/component/general/general-layout.component.html
+++ b/mocker-front/src/app/component/general/general-layout.component.html
@@ -3,5 +3,5 @@
 <div class='tw-w-300 tw-mx-auto tw-text-sm'>
   <moc-instruction></moc-instruction>
   <moc-change-log></moc-change-log>
-  <moc-copyright></moc-copyright>
+  <moc-copyright mocClass='tw-mt-10'></moc-copyright>
 </div>
