--- a/mocker-front/src/app/component/project/project-layout.component.html
+++ b/mocker-front/src/app/component/project/project-layout.component.html
@@ -1,3 +1,3 @@
 <moc-navigation></moc-navigation>
 <router-outlet></router-outlet>
-<moc-copyright></moc-copyright>
+<moc-copyright mocClass='tw-mt-10'></moc-copyright>
