--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -6,15 +6,15 @@
     <p *ngIf='!isShowOldPassword' class='tw-mt-4 tw-text-gray'>{{ 'modal.change_password.instruction' | translate }}</p>
     <moc-input *ngIf='isShowOldPassword'
                [control]='formGroup.controls.oldPassword'
-               [placeholder]='"modal.change_password.old_password_placeholder" | translate'
+               [mocPlaceholder]='"modal.change_password.old_password_placeholder" | translate'
                label='modal.change_password.old_password'
                type='password'></moc-input>
     <moc-input [control]='formGroup.controls.newPassword'
-               [placeholder]='"modal.change_password.new_password_placeholder" | translate'
+               [mocPlaceholder]='"modal.change_password.new_password_placeholder" | translate'
                label='modal.change_password.new_password'
                type='password'></moc-input>
     <moc-input [control]='formGroup.controls.confirmPassword'
-               [placeholder]='"modal.change_password.confirm_password_placeholder" | translate'
+               [mocPlaceholder]='"modal.change_password.confirm_password_placeholder" | translate'
                [selfClass]='isPasswordNotMatch ? "invalid" : ""'
                label='modal.change_password.confirm_password'
                type='password'></moc-input>
