--- a/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
+++ b/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
@@ -5,7 +5,7 @@
     <p class='tw-mt-4 tw-text-gray'>{{ 'modal.verification.instruction' | translate }}</p>
     <p class='tw-mt-2 tw-font-medium'>{{ options ? options.username : undefined }}</p>
     <moc-input [control]='verificationCode'
-               [placeholder]='"modal.verification.verification_code_placeholder" | translate'
+               [mocPlaceholder]='"modal.verification.verification_code_placeholder" | translate'
                [selfClass]='isInvalidVerificationCode ? "invalid" : ""'></moc-input>
     <p *ngIf='isInvalidVerificationCode'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'modal.verification.invalid_verification_code' | translate }}</p>
