--- a/mocker-front/src/app/component/project/component/project/project.component.html
+++ b/mocker-front/src/app/component/project/component/project/project.component.html
@@ -37,7 +37,7 @@
   <ng-template #settings>
     <div id='settings'>
       <p class='tw-mt-5 tw-font-medium'>{{ 'component.project.project_name' | translate }}</p>
-      <moc-input [control]='formGroup.controls.name' [placeholder]='"component.project.project_name_placeholder" | translate'
+      <moc-input [control]='formGroup.controls.name' [mocPlaceholder]='"component.project.project_name_placeholder" | translate'
                  class='tw-mt-3'></moc-input>
       <p class='tw-mt-5 tw-font-medium'>{{ 'component.project.share_with' | translate }}</p>
     </div>
