--- a/mocker-front/src/app/shared/component/tab/tab.component.html
+++ b/mocker-front/src/app/shared/component/tab/tab.component.html
@@ -8,5 +8,5 @@
     </button>
   </div>
   <hr/>
-  <ng-container [ngTemplateOutlet]='tabs[current].content'></ng-container>
+  <ng-container [ngTemplateOutlet]='tabs[current] ? tabs[current].content : null'></ng-container>
 </div>
