--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -4,7 +4,7 @@
     <p class='tw-font-bold tw-mt-5 text-primary-solid'>{{ 'component.forget_password.title' | translate }}</p>
     <p class='tw-text-left tw-mt-4'>{{ 'component.forget_password.instruction' | translate }}</p>
     <moc-input [control]='username'
-               [placeholder]='"component.forget_password.email_address_placeholder" | translate'
+               [mocPlaceholder]='"component.forget_password.email_address_placeholder" | translate'
                class='tw-mt-2'
                selfClass='{{ isNotExistedUsername ? "invalid" : "" }} tw-mt-2'
                type='email'></moc-input>
