--- a/mocker-front/src/app/component/auth/component/sign-up/sign-up.component.html
+++ b/mocker-front/src/app/component/auth/component/sign-up/sign-up.component.html
@@ -4,17 +4,17 @@
     <img alt='logo' class='tw-w-44 tw-mx-auto' src='assets/png/logo.png'/>
     <p class='tw-font-bold tw-mt-5 text-primary-solid'>{{ 'component.sign_up.title' | translate }}</p>
     <moc-input [control]='formGroup.controls.username'
-               [placeholder]='"component.sign_up.email_address_placeholder" | translate'
+               [mocPlaceholder]='"component.sign_up.email_address_placeholder" | translate'
                selfClass='{{ isExistedUsername ? "invalid" : "" }} tw-mt-2'
                type='email'></moc-input>
     <p *ngIf='isExistedUsername'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'component.sign_up.exist_username' | translate }}</p>
     <moc-input [control]='formGroup.controls.password'
-               [placeholder]='"component.sign_up.password_placeholder" | translate'
+               [mocPlaceholder]='"component.sign_up.password_placeholder" | translate'
                selfClass='tw-mt-2'
                type='password'></moc-input>
     <moc-input [control]='formGroup.controls.confirmPassword'
-               [placeholder]='"component.sign_up.confirm_password_placeholder" | translate'
+               [mocPlaceholder]='"component.sign_up.confirm_password_placeholder" | translate'
                selfClass='{{ isPasswordNotMatch ? "invalid" : "" }} tw-mt-2'
                type='password'></moc-input>
     <p *ngIf='isPasswordNotMatch'
