--- a/mocker-front/src/app/component/group/component/group-projects/group-projects.component.html
+++ b/mocker-front/src/app/component/group/component/group-projects/group-projects.component.html
@@ -1,40 +1,3 @@
-<div class='tw-w-300 tw-mx-auto tw-text-sm' id='main'>
-  <moc-button [label]='"component.projects.create" | translate' class='tw-w-60 tw-mt-6' routerLink='new'
-              selfClass='tw-uppercase btn-primary'></moc-button>
-  <table class='tw-mt-10 tw-w-full tw-text-left'>
-    <tr>
-      <th>
-        <i (click)='selectAll()'
-           class='tw-ml-3 tw-cursor-pointer fa-regular fa-square{{ isSelectAll ? "-check" : undefined }} tw-text-lg'></i>
-      </th>
-      <th colspan='3'>{{ 'component.projects.name' | translate }}</th>
-      <th colspan='3'>{{ 'component.projects.shared_by' | translate }}</th>
-      <th colspan='3'>{{ 'component.projects.last_modified' | translate }}</th>
-      <th [className]='canDeleteSelected ? "cursor-pointer" : undefined'>
-        <i class='fa-regular fa-trash-list tw-text-lg {{ canDeleteSelected ? undefined : "text-gray" }}'></i></th>
-    </tr>
-    <tr>
-      <td class='tw-py-4' colspan='11'>
-        <hr/>
-      </td>
-    </tr>
-    <ng-container *ngFor='let project of projects'>
-      <tr>
-        <th><i (click)='select(project.id)'
-               class='tw-ml-3 tw-cursor-pointer fa-regular fa-square{{ isCheck(project.id) ? "-check" : undefined }} tw-text-lg'></i>
-        </th>
-        <td colspan='3'><a [routerLink]='project.id'
-                           class='tw-font-medium hover:tw-underline hover:tw-text-blue tw-uppercase'>{{ project.name | truncate: 20 }}</a>
-        </td>
-        <td colspan='3'>{{ project.group.name | truncate: 20 }}</td>
-        <td colspan='3'>{{ project.modifiedDate | date }}</td>
-        <th class='tw-cursor-pointer'><i (click)='delete(project.id)' class='fa-regular fa-trash tw-text-lg'></i></th>
-      </tr>
-      <tr>
-        <td class='tw-py-4' colspan='11'>
-          <hr/>
-        </td>
-      </tr>
-    </ng-container>
-  </table>
+<div class='' id='main'>
+  <moc-grid mocClass='tw-mt-5' [createAction]='createAction' [mocGrid]='grid'></moc-grid>
 </div>
