--- a/mocker-front/src/app/shared/component/table-detail/table-detail.component.html
+++ b/mocker-front/src/app/shared/component/table-detail/table-detail.component.html
@@ -14,7 +14,7 @@
         <td class='tw-w-1/4 tw-px-3 tw-py-1.5 tw-align-top'>
           <moc-input [readonly]='isReadonly(field.controls.id ? field.controls.id.value : undefined)'
                      [control]='field.controls.name'
-                     [placeholder]='"component.table_detail.field_name_placeholder" | translate'
+                     [mocPlaceholder]='"component.table_detail.field_name_placeholder" | translate'
                      selfClass='tw-px-5'></moc-input>
         </td>
         <td class='tw-w-1/4 tw-px-3 tw-py-1.5 tw-align-top'>
@@ -44,7 +44,7 @@
                        [readonly]='isReadonly(field.controls.id ? field.controls.id.value : undefined)'
                        [min]='0'
                        class='tw-w-20'
-                       placeholder='0%'
+                       mocPlaceholder='0%'
                        selfClass='tw-text-center'
                        type='number'></moc-input>
             <moc-button [readonly]='isReadonly(field.controls.id ? field.controls.id.value : undefined)'
