--- a/mocker-front/src/app/shared/modal/choose-type/choose-type.modal.html
+++ b/mocker-front/src/app/shared/modal/choose-type/choose-type.modal.html
@@ -2,7 +2,7 @@
   <div class='tw-relative tw-w-232 tw-h-200 tw-p-5 tw-text-sm'>
     <div class='tw-flex tw-justify-between tw-items-center'>
       <p class='tw-font-medium'>{{ 'modal.choose_type.title' | translate }}</p>
-      <moc-input [control]='formControl' [placeholder]='"modal.choose_type.find_placeholder" | translate'
+      <moc-input [control]='formControl' [mocPlaceholder]='"modal.choose_type.find_placeholder" | translate'
                  class='tw-w-60'
                  selfClass='tw-p-2'></moc-input>
     </div>
