--- a/mocker-front/src/app/component/group/component/group/group.component.html
+++ b/mocker-front/src/app/component/group/component/group/group.component.html
@@ -2,15 +2,15 @@
   <div class='tw-w-96 tw-h-full tw-border tw-border-t-0 tw-p-5'>
     <p class='tw-text-3xl tw-font-medium'>{{ 'component.group.group' | translate }}</p>
     <div>
-      <moc-input [control]='formGroup.controls.name' label='component.schema.name'></moc-input>
-      <moc-input [control]='formGroup.controls.description' [textArea]='true' label='component.schema.description'
+      <moc-input [control]='formGroup.controls.name' label='component.group.name'></moc-input>
+      <moc-input [control]='formGroup.controls.description' [textArea]='true' label='component.group.description'
                  selfClass='tw-h-32 tw-overflow-auto'></moc-input>
       <div class='tw-mt-3 tw-flex tw-justify-between tw-items-center'>
         <moc-button (click)='submit()' class='tw-w-49/100 tw-inline' icon='fa-solid fa-floppy-disk'
-                    label='component.schema.save'
+                    label='component.group.save'
                     selfClass='btn-primary tw-text-left'></moc-button>
         <moc-button (click)='delete()' class='tw-w-49/100 tw-inline' icon='fa-solid fa-trash'
-                    label='component.schema.delete'
+                    label='component.group.delete'
                     selfClass='btn-red tw-text-left'></moc-button>
       </div>
     </div>
