--- a/mocker-front/src/app/shared/component/grid/grid.component.html
+++ b/mocker-front/src/app/shared/component/grid/grid.component.html
@@ -1,4 +1,4 @@
-<div [class]='mocClass'>
+<div [class]='mocClass' id='main'>
   <div class='tw-flex tw-justify-between'>
     <moc-button (click)='createAction.click()' selfClass='btn-primary tw-uppercase'
                 [label]='createAction.content'></moc-button>
@@ -21,7 +21,7 @@
         <hr/>
       </td>
     </tr>
-    <ng-container *ngFor='let value of values, let index=index'>
+    <ng-container *ngFor='let value of pageValues, let index=index'>
       <tr class='hover:tw-bg-gray'>
         <td class='tw-p-4 {{ columnActive==="no" ? "tw-bg-gray" : undefined }}'>
           {{ index + 1 + '.' }}
@@ -39,7 +39,7 @@
         </td>
       </tr>
     </ng-container>
-    <ng-container *ngIf='!values?.length'>
+    <ng-container *ngIf='!pageValues?.length'>
       <tr>
         <td [colSpan]='colSpan' class='tw-text-center tw-py-4'>
           {{ (formGroup.controls.search.value && mocGrid.values.length ? 'component.grid.values_no_match' : 'component.grid.values_empty') | translate }}
@@ -47,4 +47,17 @@
       </tr>
     </ng-container>
   </table>
+  <div class='tw-flex tw-justify-end tw-mt-5 pagination'>
+    <span (click)='pageNumberChange(1)'
+      [class]='(totalPageNumber.length === 1 || currentPageNumber === 1) ? "disable" : "enable"'>{{ '<<' }}</span>
+    <span (click)='pageNumberChange("previous")'
+      [class]='(totalPageNumber.length === 1 || currentPageNumber === 1) ? "disable" : "enable"'>{{ '<' }}</span>
+    <span *ngFor='let item of totalPageNumber'
+          (click)='pageNumberChange(item)'
+      class='{{ currentPageNumber === item ? "active" : undefined }} enable'>{{ item }}</span>
+    <span (click)='pageNumberChange("next")'
+      [class]='(totalPageNumber.length === 1 || currentPageNumber === totalPageNumber.length) ? "disable" : "enable"'>{{ '>' }}</span>
+    <span (click)='pageNumberChange(totalPageNumber.length)'
+      [class]='(totalPageNumber.length === 1 || currentPageNumber === totalPageNumber.length) ? "disable" : "enable"'>{{ '>>' }}</span>
+  </div>
 </div>
