--- a/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -1,8 +1,8 @@
-<div class='tw-sticky tw-top-0 tw-z-30'>
-  <header class='tw-bg-white tw-flex tw-text-sm tw-justify-between tw-items-center tw-px-5' id='main'>
+<div class='tw-sticky tw-top-0 tw-z-30' id='main'>
+  <header class='tw-bg-white tw-flex tw-text-sm tw-justify-between tw-items-center tw-px-5'>
     <nav class='tw-flex tw-h-14'>
       <a class='logo tw-flex tw-items-center tw-mr-10 tw-relative' routerLink='/'>
-        <img alt='logo' class='tw-w-28' ngSrc='assets/png/logo.png' height='409' width='2082'/>
+        <img alt='logo' class='tw-w-28' src='assets/png/logo.png'/>
       </a>
       <a *ngFor='let navigation of navigations'
          [routerLink]='navigation.routerLink'
