[FE] Reformat UI.

--- a/mocker-front/src/app/component/auth/component/sign-up/sign-up.component.html
+++ b/mocker-front/src/app/component/auth/component/sign-up/sign-up.component.html
@@ -3,24 +3,24 @@
        class='tw-w-100 tw-bg-white tw-rounded tw-drop-shadow-2xl tw-text-sm tw-text-center tw-p-10'>
     <img alt='logo' class='tw-w-44 tw-mx-auto' src='assets/png/logo.png'/>
     <p class='tw-font-bold tw-mt-5 text-primary-solid'>{{ 'component.sign_up.title' | translate }}</p>
-    <moc-input [control]='formGroup.controls.username'
+    <moc-input [mocControl]='formGroup.controls.username'
                [mocPlaceholder]='"component.sign_up.email_address_placeholder" | translate'
                selfClass='{{ isExistedUsername ? "invalid" : "" }} tw-mt-2'
                type='email'></moc-input>
     <p *ngIf='isExistedUsername'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'component.sign_up.exist_username' | translate }}</p>
-    <moc-input [control]='formGroup.controls.password'
+    <moc-input [mocControl]='formGroup.controls.password'
                [mocPlaceholder]='"component.sign_up.password_placeholder" | translate'
                selfClass='tw-mt-2'
                type='password'></moc-input>
-    <moc-input [control]='formGroup.controls.confirmPassword'
+    <moc-input [mocControl]='formGroup.controls.confirmPassword'
                [mocPlaceholder]='"component.sign_up.confirm_password_placeholder" | translate'
                selfClass='{{ isPasswordNotMatch ? "invalid" : "" }} tw-mt-2'
                type='password'></moc-input>
     <p *ngIf='isPasswordNotMatch'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'component.sign_up.password_not_match' | translate }}</p>
     <p class='tw-mt-4 tw-text-gray tw-text-xs'>{{ 'component.sign_up.accept_terms_and_conditions' | translate }}</p>
-    <moc-button (click)='submit()' class='tw-mt-3' selfClass='btn-primary'
+    <moc-button (click)='submit()' mocClass='tw-mt-3' selfClass='btn-primary'
                 label='component.sign_up.sign_up'></moc-button>
     <p class='tw-mt-4 tw-text-gray'>{{ 'component.sign_up.or' | translate }}</p>
     <button *ngFor='let signInMethod of signInMethods'
