--- a/mocker-front/src/app/component/group/component/groups/groups.component.html
+++ b/mocker-front/src/app/component/group/component/groups/groups.component.html
@@ -3,3 +3,4 @@
   <moc-description [description]='"component.groups.information" | translate' class='tw-mt-5'></moc-description>
   <moc-grid mocClass='tw-mt-10' [createAction]='createAction' [mocGrid]='grid'></moc-grid>
 </div>
+<moc-copyright mocClass='tw-mt-10'></moc-copyright>
