--- a/mocker-front/src/app/component/people/people-layout.component.html
+++ b/mocker-front/src/app/component/people/people-layout.component.html
@@ -1,3 +1,5 @@
 <moc-navigation></moc-navigation>
-<router-outlet></router-outlet>
-<moc-copyright mocClass='tw-mt-10'></moc-copyright>
+<div class='tw-h-[calc(100vh_-_58px)] tw-overflow-y-scroll'>
+  <router-outlet></router-outlet>
+  <moc-copyright mocClass='tw-mt-10'></moc-copyright>
+</div>
