--- a/mocker-front/src/app/component/schema/modal/relation-config/relation-config.modal.html
+++ b/mocker-front/src/app/component/schema/modal/relation-config/relation-config.modal.html
@@ -1,22 +1,22 @@
 <div [dialog]='true' [modal]='this' class='' id='main' popup>
   <div class='tw-p-5 tw-w-96 tw-text-sm'>
     <p class='tw-font-medium tw-text-lg tw-pl-2.5 tw-mt-4 tw-mb-2'>{{ "modal.relation_config.title" | translate }}</p>
-    <moc-input [control]='formGroup.controls.source'
+    <moc-input [mocControl]='formGroup.controls.source'
                [readonly]='true'
                [mocPlaceholder]='"modal.relation_config.source_placeholder" | translate'
-               label='modal.relation_config.source'></moc-input>
-    <moc-input [control]='formGroup.controls.target'
+               mocLabel='modal.relation_config.source'></moc-input>
+    <moc-input [mocControl]='formGroup.controls.target'
                [readonly]='true'
                [mocPlaceholder]='"modal.relation_config.target_placeholder" | translate'
-               label='modal.relation_config.target'></moc-input>
-    <moc-input [control]='formGroup.controls.description'
+               mocLabel='modal.relation_config.target'></moc-input>
+    <moc-input [mocControl]='formGroup.controls.description'
                [mocPlaceholder]='"modal.relation_config.description_placeholder" | translate'
-               label='modal.relation_config.description'></moc-input>
+               mocLabel='modal.relation_config.description'></moc-input>
     <p class='tw-font-medium tw-pl-2.5 tw-mt-4 tw-mb-2'>{{ "modal.relation_config.relation_type" | translate }}</p>
     <moc-dropdown [options]='relationTypeOptions'>
       <moc-button [control]='formGroup.controls.relationType'
                   [label]='label'
-                  class='tw-mt-3'
+                  mocClass='tw-mt-3'
                   icon='fa-solid fa-arrow-up-arrow-down'
                   selfClass='tw-text-left btn-light'></moc-button>
     </moc-dropdown>
@@ -27,12 +27,12 @@
                   selfClass='btn-red'>
       </moc-button>
       <moc-button (click)='modalInstance.close(false)'
-                  class='tw-ml-1'
+                  mocClass='tw-ml-1'
                   label='modal.relation_config.cancel'
                   selfClass='btn-light'>
       </moc-button>
       <moc-button (click)='close()'
-                  class='tw-ml-1'
+                  mocClass='tw-ml-1'
                   label='modal.relation_config.ok'
                   selfClass='tw-w-12 btn-primary'>
       </moc-button>
