--- a/mocker-front/src/app/shared/component/change-log/change-log.component.html
+++ b/mocker-front/src/app/shared/component/change-log/change-log.component.html
@@ -1,4 +1,4 @@
-<div [class]='class' id='main'>
+<div [class]='mocClass' id='main'>
   <p class='tw-mt-8 tw-text-justify tw-text-blue tw-text-2xl'>What's new in Mocker?</p>
   <table class='tw-mt-3'>
     <tr *ngFor='let changeLog of changeLogs'>
