--- a/mocker-front/src/app/shared/component/instruction/instruction.component.html
+++ b/mocker-front/src/app/shared/component/instruction/instruction.component.html
@@ -1,4 +1,4 @@
-<div [class]='class' id='main'>
+<div [class]='mocClass' id='main'>
   <p class='tw-mt-8 tw-text-justify tw-text-blue tw-text-2xl'>{{ 'Mock your back-end API and start coding your UI today.' }}</p>
   <p
     class='tw-mt-5 tw-text-justify'>{{ 'It\'s hard to put together a meaningful UI prototype without making real requests to an API. By making real requests, you\'ll uncover problems with application flow, timing, and API design early, improving the quality of both the user experience and API. With Mockaroo, you can design your own mock APIs, You control the URLs, responses, and error conditions. Paralellize UI and API development and start delivering better applications faster today!' }}</p>
