--- a/mocker-front/src/app/shared/component/tab1/tab1.component.html
+++ b/mocker-front/src/app/shared/component/tab1/tab1.component.html
@@ -1,4 +1,4 @@
-<div [class]='class' id='main'>
+<div [class]='mocClass' id='main'>
   <div [class]='selfClass'>
     <button (click)='change(index)'
             *ngFor='let tab of tabs; let index=index'
