--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -5,22 +5,22 @@
          height='256' width='256'/>
     <p *ngIf='!isShowOldPassword' class='tw-mt-4 tw-text-gray'>{{ 'modal.change_password.instruction' | translate }}</p>
     <moc-input *ngIf='isShowOldPassword'
-               [control]='formGroup.controls.oldPassword'
+               [mocControl]='formGroup.controls.oldPassword'
                [mocPlaceholder]='"modal.change_password.old_password_placeholder" | translate'
-               label='modal.change_password.old_password'
+               mocLabel='modal.change_password.old_password'
                type='password'></moc-input>
-    <moc-input [control]='formGroup.controls.newPassword'
+    <moc-input [mocControl]='formGroup.controls.newPassword'
                [mocPlaceholder]='"modal.change_password.new_password_placeholder" | translate'
-               label='modal.change_password.new_password'
+               mocLabel='modal.change_password.new_password'
                type='password'></moc-input>
-    <moc-input [control]='formGroup.controls.confirmPassword'
+    <moc-input [mocControl]='formGroup.controls.confirmPassword'
                [mocPlaceholder]='"modal.change_password.confirm_password_placeholder" | translate'
                [selfClass]='isPasswordNotMatch ? "invalid" : ""'
-               label='modal.change_password.confirm_password'
+               mocLabel='modal.change_password.confirm_password'
                type='password'></moc-input>
     <p *ngIf='isPasswordNotMatch'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'modal.change_password.password_not_match' | translate }}</p>
-    <moc-button (click)='submit()' class='tw-mt-5' label='modal.change_password.change_password'
+    <moc-button (click)='submit()' mocClass='tw-mt-5' label='modal.change_password.change_password'
                 selfClass='btn-primary'></moc-button>
   </div>
 </div>
