--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -1,29 +1,29 @@
 <div class='tw-w-300 tw-mx-auto tw-text-sm' id='main'>
   <p class='tw-text-3xl tw-font-medium tw-mt-5'>{{ 'component.general.mocker' | translate }}</p>
   <moc-description [description]='"component.general.introduction" | translate' class='tw-mt-5'></moc-description>
-  <moc-table-detail [fields]='formGroup.controls.table.controls.fields' class='tw-mt-10'></moc-table-detail>
+  <moc-table-detail [fields]='formGroup.controls.table.controls.fields' mocClass='tw-mt-10'></moc-table-detail>
   <hr class='tw-mt-5'/>
   <div [formGroup]='formGroup' class='tw-flex tw-mt-5'>
     <span class='tw-mt-3 tw-mr-5'>{{ 'component.general.row' | translate }}</span>
-    <moc-input [control]='formGroup.controls.rows' class='tw-w-24' selfClass='tw-px-5'></moc-input>
+    <moc-input [mocControl]='formGroup.controls.rows' mocClass='tw-w-24' selfClass='tw-px-5'></moc-input>
     <span class='tw-mt-3 tw-mx-5'>{{ 'component.general.format' | translate }}</span>
     <moc-dropdown [options]='formats'>
-      <moc-button [label]='formGroup.controls.format.value' class='tw-w-32' icon='fa-solid fa-arrow-up-arrow-down'
+      <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-arrow-up-arrow-down'
                   selfClass='tw-text-left btn-light'></moc-button>
     </moc-dropdown>
     <span *ngIf='isShowTableNameField' class='tw-mt-3 tw-mx-5'>{{ 'component.general.table_name' | translate }}</span>
-    <moc-input *ngIf='isShowTableNameField' [control]='formGroup.controls.table.controls.name' class='tw-w-32'
+    <moc-input *ngIf='isShowTableNameField' [mocControl]='formGroup.controls.table.controls.name' mocClass='tw-w-32'
                selfClass='tw-px-5'></moc-input>
   </div>
   <hr class='tw-mt-5'/>
   <div class='tw-mt-5 tw-flex'>
-    <moc-button (click)='download()' class='tw-w-52' label='component.general.download_data'
+    <moc-button (click)='download()' mocClass='tw-w-52' label='component.general.download_data'
                 selfClass='btn-primary'></moc-button>
-    <moc-button (click)='preview()' class='tw-w-52 tw-ml-3' label='component.general.preview'
+    <moc-button (click)='preview()' mocClass='tw-w-52 tw-ml-3' label='component.general.preview'
                 selfClass='tw-px-5 btn-light'></moc-button>
-    <moc-button class='tw-w-52 tw-ml-3' label='component.general.save_this_table'
+    <moc-button mocClass='tw-w-52 tw-ml-3' label='component.general.save_this_table'
                 selfClass='tw-px-5 btn-light'></moc-button>
-    <moc-button class='tw-w-52 tw-ml-3' icon='fa-solid fa-arrow-up-arrow-down' label='component.general.more'
+    <moc-button mocClass='tw-w-52 tw-ml-3' icon='fa-solid fa-arrow-up-arrow-down' label='component.general.more'
                 selfClass='tw-px-5 btn-light'></moc-button>
   </div>
 </div>
