--- a/mocker-front/src/app/component/people/component/person/person.component.html
+++ b/mocker-front/src/app/component/people/component/person/person.component.html
@@ -3,32 +3,32 @@
   <div class='tw-mt-5 tw-flex tw-justify-between'>
     <div class='tw-p-5 tw-w-49/100 tw-border tw-rounded'>
       <p class='tw-font-medium'>{{ 'component.person.my_email' | translate }}</p>
-      <moc-input [control]='formGroup.controls.username' class='tw-mt-5' type='email'></moc-input>
+      <moc-input [mocControl]='formGroup.controls.username' mocClass='tw-mt-5' type='email'></moc-input>
       <p *ngIf='isExistedUsername'
          class='tw-text-red tw-text-center tw-mt-2'>{{ 'component.sign_up.exist_username' | translate }}</p>
-      <moc-button class='tw-mt-3 tw-text-right'
+      <moc-button mocClass='tw-mt-3 tw-text-right'
                   label='component.person.save'
                   selfClass='tw-w-28 {{ formGroup.controls.username.value === user.username ? "btn-light" : "btn-primary" }}'></moc-button>
     </div>
     <div class='tw-p-5 tw-w-49/100 tw-border tw-rounded'>
       <p class='tw-font-medium'>{{ 'component.person.my_password' | translate }}</p>
-      <moc-button (click)='changePassword()' class='mt-3' label='component.person.change_password'
+      <moc-button (click)='changePassword()' mocClass='mt-3' label='component.person.change_password'
                   selfClass='tw-w-52 btn-primary'></moc-button>
     </div>
   </div>
   <div class='tw-mt-5 tw-flex tw-justify-between'>
     <div class='tw-p-5 tw-w-49/100 tw-border tw-rounded'>
       <p class='tw-font-medium'>{{ 'component.person.my_api_key' | translate }}</p>
-      <moc-input [control]='formGroup.controls.apiKey' class='tw-mt-5'></moc-input>
+      <moc-input [mocControl]='formGroup.controls.apiKey' mocClass='tw-mt-5'></moc-input>
       <p
         class='tw-mt-3'>{{ 'You have used 0 of the maximum requests allowed by the free tier in the last 24 hours.' }}</p>
-      <moc-button class='tw-mt-8 text-right' label='component.person.generate_new_api_key'
+      <moc-button mocClass='tw-mt-8 text-right' label='component.person.generate_new_api_key'
                   selfClass='tw-w-52 btn-primary'></moc-button>
     </div>
     <div class='tw-p-5 tw-w-49/100 tw-border tw-rounded'>
       <p class='tw-font-medium'>{{ 'component.person.my_plan' | translate }}</p>
       <p class='tw-mt-5'><b>Free</b> - 1,000 rows/download - Free</p>
-      <moc-button class='tw-mt-20 tw-text-right' label='component.person.change_plan'
+      <moc-button mocClass='tw-mt-20 tw-text-right' label='component.person.change_plan'
                   selfClass='tw-w-36 btn-primary'></moc-button>
     </div>
   </div>
@@ -37,7 +37,7 @@
       <p class='tw-font-medium'>{{ 'component.person.delete_my_account' | translate }}</p>
       <p
         class='tw-mt-3'>{{ 'If you delete your account, all of your data will be lost forever. Proceed with caution!' }}</p>
-      <moc-button class='tw-mt-8 tw-text-right' label='component.person.delete_my_account'
+      <moc-button mocClass='tw-mt-8 tw-text-right' label='component.person.delete_my_account'
                   selfClass='tw-w-52 tw-text-white tw-bg-red tw-uppercase'></moc-button>
     </div>
     <div class='tw-p-5 tw-w-49/100 tw-border tw-rounded'>
