--- a/mocker-front/src/app/component/schema/component/schemas/schemas.component.html
+++ b/mocker-front/src/app/component/schema/component/schemas/schemas.component.html
@@ -4,3 +4,4 @@
                    class='tw-mt-5'></moc-description>
   <moc-grid mocClass='tw-mt-10' [createAction]='createAction' [mocGrid]='grid'></moc-grid>
 </div>
+<moc-copyright mocClass='tw-mt-10'></moc-copyright>
