--- a/mocker-front/src/app/shared/component/button/button.component.html
+++ b/mocker-front/src/app/shared/component/button/button.component.html
@@ -1,4 +1,4 @@
-<div [class]='class' id='main'>
+<div [class]='mocClass' id='main'>
   <button
     (click)='buttonClick()'
     class='{{ selfClass }} {{ isValidated && control && control.invalid ? "invalid" : "" }} tw-py-2.5 tw-px-5 tw-rounded tw-font-medium tw-w-full {{ readonly ? "tw-cursor-default" : "tw-cursor-pointer hover:tw-drop-shadow-md" }} tw-relative'>
