--- a/mocker-front/src/app/shared/component/grid/grid.component.html
+++ b/mocker-front/src/app/shared/component/grid/grid.component.html
@@ -2,7 +2,7 @@
   <div class='tw-flex tw-justify-between'>
     <moc-button (click)='createAction.click()' selfClass='btn-primary tw-uppercase'
                 [label]='createAction.content'></moc-button>
-    <moc-input class='tw-w-96' [mocPlaceholder]='searchPlaceholder' [control]='formGroup.controls.search'></moc-input>
+    <moc-input mocClass='tw-w-96' [mocPlaceholder]='searchPlaceholder' [mocControl]='formGroup.controls.search'></moc-input>
   </div>
   <table class='tw-w-full tw-mt-5 tw-text-left'>
     <tr class='tw-bg-gray' (mouseleave)='columnActive=""'>
