--- a/mocker-front/src/app/shared/component/table-detail/table-detail.component.html
+++ b/mocker-front/src/app/shared/component/table-detail/table-detail.component.html
@@ -1,4 +1,4 @@
-<div [class]='class' id='main' xmlns='http://www.w3.org/1999/html'>
+<div [class]='mocClass' id='main' xmlns='http://www.w3.org/1999/html'>
   <div [class]='selfClass'>
     <table class='tw-w-full'>
       <thead class='tw-sticky tw-top-0 tw-bg-white tw-z-20'>
@@ -13,7 +13,7 @@
       <tr [formGroupName]='i' class='tw-relative' #fieldElement>
         <td class='tw-w-1/4 tw-px-3 tw-py-1.5 tw-align-top'>
           <moc-input [readonly]='isReadonly(field.controls.id ? field.controls.id.value : undefined)'
-                     [control]='field.controls.name'
+                     [mocControl]='field.controls.name'
                      [mocPlaceholder]='"component.table_detail.field_name_placeholder" | translate'
                      selfClass='tw-px-5'></moc-input>
         </td>
@@ -40,15 +40,15 @@
         <td class='tw-w-1/4 tw-px-3 tw-py-1.5 tw-align-top'>
           <div class='tw-flex tw-justify-between'>
             <p class='tw-self-center'>{{ 'component.table_detail.blank' | translate }}</p>
-            <moc-input [control]='field.controls.option.controls.blank' [max]='100'
+            <moc-input [mocControl]='field.controls.option.controls.blank' [max]='100'
                        [readonly]='isReadonly(field.controls.id ? field.controls.id.value : undefined)'
                        [min]='0'
-                       class='tw-w-20'
+                       mocClass='tw-w-20'
                        mocPlaceholder='0%'
                        selfClass='tw-text-center'
                        type='number'></moc-input>
             <moc-button [readonly]='isReadonly(field.controls.id ? field.controls.id.value : undefined)'
-                        class='tw-w-12'
+                        mocClass='tw-w-12'
                         icon='fa-solid fa-sigma'
                         selfClass='btn-light tw-h-10'></moc-button>
             <i (click)='removeField(i, field.controls.id ? field.controls.id.value : undefined)'
@@ -68,7 +68,7 @@
       </tfoot>
     </table>
   </div>
-  <moc-button (click)='insertField()' class='tw-w-[calc(208px)] tw-mt-3 tw-inline-block'
+  <moc-button (click)='insertField()' mocClass='tw-w-[calc(208px)] tw-mt-3 tw-inline-block'
               label='component.table_detail.add_another_field'
               selfClass='btn-primary'></moc-button>
 </div>
