--- a/mocker-front/src/app/shared/component/table/table.component.html
+++ b/mocker-front/src/app/shared/component/table/table.component.html
@@ -1,4 +1,4 @@
-<div class='{{ class }} tw-text-sm tw-rounded-md tw-z-10 tw-drop-shadow-xl' id='main'>
+<div class='{{ mocClass }} tw-text-sm tw-rounded-md tw-z-10 tw-drop-shadow-xl' id='main'>
   <div class='{{ selfClass }} tw-border tw-rounded tw-w-72'>
     <p class='tw-bg-blue tw-h-8 tw-text-center tw-leading-8 tw-font-medium tw-text-white tw-uppercase'>
       <i class='fa-regular fa-table tw-mr-3'></i>
