--- a/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
+++ b/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
@@ -15,7 +15,7 @@
         </moc-button>
         <moc-button (click)='close(true)'
                     *ngIf='isShowBtnOK'
-                    class='tw-ml-1'
+                    mocClass='tw-ml-1'
                     label='modal.dialog.ok'
                     selfClass='tw-w-12 btn-primary tw-bg-{{ color }}'>
         </moc-button>
